# TransferPilot

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: main.rs  transfer.rs
src/components/transfer/: QueuePanel.tsx  VolumePicker.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx  ThemeToggle.tsx
src/contexts/: ThemeContext.tsx
src/lib/: tauri.ts  theme.ts
src/pages/: DashboardPage.tsx
src/types/: transfer.ts
