[package]
name = "transferpilot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
mime_guess = "2"
sysinfo = "0.30.13"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3.44", features = ["formatting"] }
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1", features = ["sync"] }
